#1621: fix build security.json (#1623)